# VisionKit

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  build_examples.sh  how_to_use.cpp
src/: CMakeLists.txt  vision.h
src/common/: fake_blur.cpp  fake_blur.h
src/feature_extraction/: curvature.h
